--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
