--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.1.0",
