--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
+    "n_": "^4.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -57,5 +62,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "https://pro-api.coinmarketcap.com",
+  "devDependencies": {
+    "@types/lodash": "^4.14.202"
   }
 }
