Portfolio Component - refactoring

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "proxy": "https://pro-api.coinmarketcap.com",
   "devDependencies": {
-    "@types/lodash": "^4.14.202"
+    "@types/lodash": "^4.14.202",
+    "prettier": "^3.2.5"
   }
 }
