--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.28.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -37,6 +38,7 @@
     "redux-thunk": "^3.1.0",
     "typescript": "^4.4.2",
     "uuid": "^9.0.1",
+    "wagmi": "^2.5.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
