--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "@web3modal/wagmi": "^4.1.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "redux-thunk": "^3.1.0",
     "typescript": "^4.4.2",
     "uuid": "^9.0.1",
+    "viem": "^2.8.10",
     "wagmi": "^2.5.7",
     "web-vitals": "^2.1.0"
   },
