--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-particles": "^2.12.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "tsparticles": "2.0.6",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "^4.4.2",
     "uuid": "^9.0.1",
     "viem": "^2.8.10",
