--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-tsparticles": "^2.12.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
