--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@web3modal/wagmi": "^4.1.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "lodash": "^4.17.21",
